2012-06-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/lvm.c (grub_lvm_getvalue): Handle 64-bit values.

2012-06-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fat.c (grub_fat_iterate_dir_next): Don't stop on a space
	character but still remove trainling spaces.
	(grub_fat_label): Ignore archive flag.

2012-06-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (grub_cmd_initrd): Avoid unnecessarry
	cast between linux_kernel_header and linux_kernel_params.

2012-06-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/diskfilter.h (grub_raid5_recover_func_t): Use proper
	type for size.
	(grub_raid6_recover_func_t): Likewise.
	* grub-core/disk/raid5_recover.c (grub_raid5_recover): Likewise.
	* grub-core/disk/raid6_recover.c (grub_raid6_recover): Likewise.

2012-06-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (generate_image): Add Fuloong2F verified hash.

2012-06-25  Grégoire Sutre  <gregoire.sutre@gmail.com>

	Fix overflow.

	* grub-core/kern/emu/hostdisk.c (grub_util_get_fd_size)
	[__NetBSD__]: Add explicit cast before bitshift.

2012-06-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Bump to 2.00~rc1.

2012-06-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/mips/loongson/fwstart.S: Add missing setting of high
	half of $a0.

2012-06-23  Vladimir Serbinenko  <phcoder@gmail.com>
2012-06-23  Jordan Uggla  <jordan.uggla@gmail.com>

	* docs/grub.texi: Fix search syntax.
	(Multi-boot manual config): Put msdos rather than GPT example.
	Grammar corrections.

2012-06-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Multi-boot manual config): Use --set. Improve remark.

2012-06-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mm.c (grub_free): Fix agglomerating of free regions.

2012-06-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mm.c (get_header_from_pointer): Put a more informative